--- a/apps/nb/templates/fullserver.html
+++ b/apps/nb/templates/fullserver.html
@@ -9,10 +9,10 @@
 
     <link rel="stylesheet" href="/css/page.css" type="text/css" />
 
-    <script src="/js0/jquery.3.1.1.min.js" type="text/javascript"></script>
+	<!-- <script src="/js0/jquery.3.1.1.min.js" type="text/javascript"></script>
     <script src="/js0/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="/js0/page.js" type="text/javascript"></script>
-    {{{share_tags}}}
+    <script src="/js0/page.js" type="text/javascript"></script> -->    
+ 	{{{share_tags}}}
 </head>
 
 <body bgcolor=white>
@@ -20,7 +20,7 @@
 <table width=100% cellpadding=0 cellspacing=0>
     <tr>
         <td class="left_column">
-            <h1 class="ut0" title="Приватний нотатник і збирач даних. Публічна біліотека."><a href="/" style="color:#666666">Ruthenia.Info</a></h1>
+            <h1 class="ut0" title="Приватний нотатник і збирач даних. Публічна бібліотека."><a href="/" style="color:#666666">Ruthenia.Info</a></h1>
             <div class="left_div ut">
                 {{{user}}}
                 {{{left}}}
