--- a/apps/nb/templates/local.html
+++ b/apps/nb/templates/local.html
@@ -5,14 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <title>Нотатник: {{titulus}}</title>
+    <title>Нотатник: {{title}}</title>
 
-    <link rel="stylesheet" href="/css/page.css" type="text/css" />
+    <link rel="stylesheet" href="/static/css/page.css" type="text/css" />
 
-    <script src="/js0/jquery.3.1.1.min.js" type="text/javascript"></script>
-    <script src="/js0/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="/js0/page.js" type="text/javascript"></script>
-    {{{share_tags}}}
+    <!-- <script src="/static/js/jquery.3.1.1.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/static/js/page.js" type="text/javascript"></script>
+    {{{share_tags}}} -->
+
 </head>
 
 <body bgcolor=white>
@@ -28,11 +29,11 @@
         </td>
         <td class="main_column">
             <table class="border" style="padding:5px;margin: 15px 0 10px 10px;width:200px;" align=right>{{{index}}}</table>
-            <div class="ut1" style="min-height:71px;"><span style="font-size:16pt;">{{{caput}}}</span><br>{{{navigation}}}</div>
-            <span class="{{{show_warning}}}" role="alert" id="alarm_mes">{{{warning}}}</span>
+            <div class="ut1" style="min-height:71px;"><span style="font-size:16pt;">{{{header}}}</span><br>{{{navigation}}}</div>
+            <span class="{{{show_warning}}}" role="alert" id="alarm_mes">{{{message}}}</span>
             <span role="alert" id="success_mes"></span>
             <span role="alert" id="error_mes"></span>
-            <div id="corpus">{{{corpus}}}</div>
+            <div id="corpus">{{{content}}}</div>
         </td>
     </tr>
 <tr>
