passed page update

--- a/apps/nb/templates/fullserver.html
+++ b/apps/nb/templates/fullserver.html
@@ -7,12 +7,15 @@
 
     <title>Нотатник: {{titulus}}</title>
 
-    <link rel="stylesheet" href="/css/page.css" type="text/css" />
+    <link rel="stylesheet" href="/static/css/page.css" type="text/css" />
+    <script src="/static/js/page.js" type="text/javascript"></script>
 
-	<!-- <script src="/js0/jquery.3.1.1.min.js" type="text/javascript"></script>
-    <script src="/js0/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="/js0/page.js" type="text/javascript"></script> -->    
- 	{{{share_tags}}}
+	<!--
+	<script src="/js/jquery.3.1.1.min.js" type="text/javascript"></script>
+    <script src="/js/jquery-ui.min.js" type="text/javascript"></script>
+    {{{share_tags}}}
+    -->
+
 </head>
 
 <body bgcolor=white>
