--- a/apps/nb/templates/local.html
+++ b/apps/nb/templates/local.html
@@ -8,11 +8,13 @@
     <title>Нотатник: {{title}}</title>
 
     <link rel="stylesheet" href="/static/css/page.css" type="text/css" />
-
-    <!-- <script src="/static/js/jquery.3.1.1.min.js" type="text/javascript"></script>
-    <script src="/static/js/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/static/js/page.js" type="text/javascript"></script>
-    {{{share_tags}}} -->
+
+    <!--
+    <script src="/static/js/jquery.3.1.1.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery-ui.min.js" type="text/javascript"></script>
+    {{{share_tags}}}
+    -->
 
 </head>
 
