fixed the new handlers structure

--- a/apps/nb_www/templates/local.html
+++ b/apps/nb_www/templates/local.html
@@ -30,12 +30,11 @@
             </div>
         </td>
         <td class="main_column">
-            <!-- <div class="border" style="padding:5px;margin: 15px 0 10px 10px;width:200px;" align=right>{{{index}}}</div>-->
             <div class="ut1" style="min-height:71px;"><span style="font-size:16pt;">{{{header}}}</span><br>{{{navigation}}}</div>
-            <span class="{{{show_warning}}}" role="alert" id="alarm_mes">{{{message}}}</span>
-            <span role="alert" id="success_mes"></span>
-            <span role="alert" id="error_mes"></span>
-            <div id="corpus">{{{content}}}</div>
+            <span>{{{error}}}</span>
+            <span>{{{message}}}</span>
+            <div style="padding:5px;margin: 15px 0 10px 10px;width:200px;" align=right>{{{index}}}</div>
+            <div>{{{content}}}</div>
         </td>
     </tr>
 <tr>
