--- a/apps/nb_www/templates/fullserver.html
+++ b/apps/nb_www/templates/fullserver.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <title>Нотатник: {{titulus}}</title>
+    <title>Нотатник: {{title}}</title>
 
     <link rel="stylesheet" href="/static/css/page.css" type="text/css" />
     <script src="/static/js/page.js" type="text/javascript"></script>
@@ -20,22 +20,21 @@
 
 <body bgcolor=white>
 
-<table width=100% cellpadding=0 cellspacing=0>
+<div width=100% cellpadding=0 cellspacing=0>
     <tr>
         <td class="left_column">
-            <h1 class="ut0" title="Приватний нотатник і збирач даних. Публічна бібліотека."><a href="/" style="color:#666666">Ruthenia.Info</a></h1>
+            <h1 class="ut0" title="Приватний нотатник і збирач даних. Публічна бібліотека."><a href="/" style="color:#666666">Infomincer.Net</a></h1>
             <div class="left_div ut">
                 {{{user}}}
                 {{{left}}}
             </div>
         </td>
         <td class="main_column">
-            <table class="border" style="padding:5px;margin: 15px 0 10px 10px;width:200px;" align=right>{{{index}}}</table>
-            <div class="ut1" style="min-height:92px;"><span style="font-size:16pt;">{{{caput}}}</span><br>{{{navigation}}}</div>
-            <span class="{{{show_warning}}}" role="alert" id="alarm_mes">{{{warning}}}</span>
-            <span role="alert" id="success_mes"></span>
-            <span role="alert" id="error_mes"></span>
-            <div id="corpus">{{{corpus}}}</div>
+            <div class="ut1" style="min-height:92px;"><span style="font-size:16pt;">{{{header}}}</span><br>{{{navigation}}}</div>
+            <span>{{{error}}}</span>
+            <span>{{{message}}}</span>
+            <div style="padding:5px;margin: 15px 0 10px 10px;width:200px;" align=right>{{{index}}}</div>
+            <div>{{{content}}}</div>
         </td>
     </tr>
 <tr>
