--- a/apps/nb_www/templates/local.html
+++ b/apps/nb_www/templates/local.html
@@ -33,7 +33,7 @@
             <div class="ut1" style="min-height:71px;"><span style="font-size:16pt;">{{{header}}}</span><br>{{{navigation}}}</div>
             <span>{{{error}}}</span>
             <span>{{{message}}}</span>
-            <div style="padding:5px;margin: 15px 0 10px 10px;width:200px;" align=right>{{{index}}}</div>
+            {{{index}}}
             <div>{{{content}}}</div>
         </td>
     </tr>
